[gd_scene load_steps=3 format=2]

[ext_resource path="res://Test.gd" type="Script" id=1]
[ext_resource path="res://Sound/VG52.wav" type="AudioStream" id=2]

[node name="Test" type="Node2D"]
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Button2" type="Button" parent="."]
margin_left = 546.089
margin_top = 295.698
margin_right = 596.089
margin_bottom = 315.698
text = "play 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 374.446
margin_top = 286.497
margin_right = 424.446
margin_bottom = 306.497
text = "play 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 548.375
margin_top = 254.529
margin_right = 588.375
margin_bottom = 268.529
text = "play 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 389.725
margin_top = 246.251
margin_right = 429.725
margin_bottom = 260.251
text = "play 1"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
